--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "firebase": "^9.22.0",
     "mdb-react-ui-kit": "^6.0.0",
     "mdbreact": "^5.2.0",
