--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "chart.js": "^3.5.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "firebase": "^9.22.0",
     "mdb-react-ui-kit": "^6.0.0",
     "mdbreact": "^5.2.0",
@@ -22,6 +23,7 @@
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
