--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^3.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "firebase": "^9.22.0",
+    "firebase-admin": "^11.9.0",
     "mdb-react-ui-kit": "^6.0.0",
     "mdbreact": "^5.2.0",
     "moment": "^2.29.4",
